--- a/views/a06_利害關係人專區.twig
+++ b/views/a06_利害關係人專區.twig
@@ -14,7 +14,7 @@
 	<h3>重要利害關係人溝通績效</h3>
 	<div class="table_desktop">
 	<table >
-		<tr >
+		<tr align="center" bgcolor="#ff6600" style="color: rgb(255, 255, 255);" valign="middle">
 			<th style="width:20%">利害關係人</th>
 			<th style="width:20%">溝通管道 </th>
 			<th style="width:20%">2015年重點溝通績效</th>
@@ -421,6 +421,7 @@
 			<div class="clear" style="height: 10px"></div>	
 			<a href="#" class="submit_m">送出</a>
 
+			<div class="clear"></div>	
           </div>
 		</section>
 	</section>
